--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.2",
