--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.3.3",
     "cdbreact": "^1.5.19",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.0.11",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
