--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.26.3",
+    "@capacitor/camera": "^7.0.0",
+    "@capacitor/filesystem": "^7.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cdbreact": "^1.5.19",
@@ -13,7 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^6.28.1",
+    "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.2",
     "web-vitals": "^4.2.4"
